--- a/pid-graph/r-researcher-software.ipynb
+++ b/pid-graph/r-researcher-software.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook uses the DataCite GraphQL API to fetch all software packages authored by a particular researcher."
+        "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch all software packages authored by a particular researcher, using his/her ORCID ID."
       ],
       "metadata": {}
     },
@@ -20,6 +20,7 @@
         "library(\"httr\")\n",
         "library(\"ghql\")\n",
         "library(\"jsonlite\")\n",
+        "library(\"textutils\")\n",
         "\n",
         "cli <- GraphqlClient$new(\n",
         "  url = \"https://api.datacite.org/graphql\"\n",
@@ -27,7 +28,7 @@
         "qry <- Query$new()"
       ],
       "outputs": [],
-      "execution_count": 64,
+      "execution_count": 70,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -46,8 +47,7 @@
       "source": [
         "query <- '{\n",
         "   researcher(id: \"https://orcid.org/0000-0003-1444-9135\") {\n",
-        "    givenName\n",
-        "    familyName\n",
+        "    name\n",
         "    softwares {\n",
         "      totalCount\n",
         "      nodes {\n",
@@ -70,7 +70,7 @@
         "}'"
       ],
       "outputs": [],
-      "execution_count": 65,
+      "execution_count": 71,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -80,16 +80,62 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Run the query and parse the JSON response, returning the software packages as data frame, with the fields specified in the query."
+        "Run the query and parse the JSON response."
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "qry$query('getdata', query)\n",
-        "data <- fromJSON(cli$exec(qry$queries$getdata))\n",
+        "data <- fromJSON(cli$exec(qry$queries$getdata))"
+      ],
+      "outputs": [],
+      "execution_count": 72,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Get the name of the researcher with ORCID ID https://orcid.org/0000-0003-1444-9135."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message(data$data$researcher$name)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Scott A Chamberlain\n"
+          ]
+        }
+      ],
+      "execution_count": 80,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Return the software packages as data frame, with the fields specified in the query."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "softwares <- data$data$researcher$softwares$nodes\n",
         "softwares"
       ],
@@ -145,7 +191,42 @@
           "metadata": {}
         }
       ],
-      "execution_count": 66,
+      "execution_count": 85,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generate a list of formatted citations in APA format for these software packages."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ids <- softwares[,1]\n",
+        "ids <- substr(ids, 17, 100)\n",
+        "ids <- paste(ids, collapse = ',')\n",
+        "url <- paste('https://api.datacite.org/dois?style=apa&ids=', ids, sep = '')\n",
+        "response <- GET(url, accept(\"text/x-bibliography\"))\n",
+        "message(HTMLdecode(content(response, as = 'text')))           "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Foster, Z., Chamberlain, S., & Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183666\n",
+            "\n",
+            "Foster, Z., Chamberlain, S., & Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183667\n"
+          ]
+        }
+      ],
+      "execution_count": 86,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
