use different library to display formatted citations

--- a/pid-graph/r-researcher-software.ipynb
+++ b/pid-graph/r-researcher-software.ipynb
@@ -20,7 +20,7 @@
         "library(\"httr\")\n",
         "library(\"ghql\")\n",
         "library(\"jsonlite\")\n",
-        "library(\"textutils\")\n",
+        "library(\"IRdisplay\")\n",
         "\n",
         "cli <- GraphqlClient$new(\n",
         "  url = \"https://api.datacite.org/graphql\"\n",
@@ -28,7 +28,7 @@
         "qry <- Query$new()"
       ],
       "outputs": [],
-      "execution_count": 70,
+      "execution_count": 88,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -70,7 +70,7 @@
         "}'"
       ],
       "outputs": [],
-      "execution_count": 71,
+      "execution_count": 89,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -91,7 +91,7 @@
         "data <- fromJSON(cli$exec(qry$queries$getdata))"
       ],
       "outputs": [],
-      "execution_count": 72,
+      "execution_count": 90,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -119,7 +119,7 @@
           ]
         }
       ],
-      "execution_count": 80,
+      "execution_count": 91,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -191,7 +191,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 85,
+      "execution_count": 92,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -213,20 +213,22 @@
         "ids <- paste(ids, collapse = ',')\n",
         "url <- paste('https://api.datacite.org/dois?style=apa&ids=', ids, sep = '')\n",
         "response <- GET(url, accept(\"text/x-bibliography\"))\n",
-        "message(HTMLdecode(content(response, as = 'text')))           "
+        "display_markdown(content(response, as = 'text'))          "
       ],
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Foster, Z., Chamberlain, S., & Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183666\n",
-            "\n",
-            "Foster, Z., Chamberlain, S., & Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183667\n"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/markdown": [
+              "Foster, Z., Chamberlain, S., &amp; Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183666\n",
+              "\n",
+              "Foster, Z., Chamberlain, S., &amp; Grunwald, N. (2017, December 19). Taxa V0.2.0. Zenodo. https://doi.org/10.5281/ZENODO.1183667"
+            ]
+          },
+          "metadata": {}
         }
       ],
-      "execution_count": 86,
+      "execution_count": 94,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
