added example using related_identifiers

--- a/pid-graph/r-researcher-software.ipynb
+++ b/pid-graph/r-researcher-software.ipynb
@@ -3,20 +3,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Software packages by researcher\n",
+        "\n",
         "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch all software packages authored by a particular researcher, using his/her ORCID ID."
-      ],
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Prepare the R graphql client."
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
       "source": [
+        "# Prepare the R graphql client.\n",
+        "\n",
         "library(\"httr\")\n",
         "library(\"ghql\")\n",
         "library(\"jsonlite\")\n",
@@ -36,15 +33,10 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Generate the GraphQL query: find the researcher by ORCID ID, then fetch all software with DataCite DOIs linked to that ORCID account."
-      ],
-      "metadata": {}
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# Generate the GraphQL query: find the researcher by ORCID ID, then fetch all software with DataCite DOIs linked to that ORCID account.\n",
+        "\n",
         "query <- '{\n",
         "   researcher(id: \"https://orcid.org/0000-0003-1444-9135\") {\n",
         "    name\n",
@@ -78,15 +70,10 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Run the query and parse the JSON response."
-      ],
-      "metadata": {}
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# Run the query and parse the JSON response\n",
+        "\n",
         "qry$query('getdata', query)\n",
         "data <- fromJSON(cli$exec(qry$queries$getdata))"
       ],
@@ -99,16 +86,11 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Get the name of the researcher with ORCID ID https://orcid.org/0000-0003-1444-9135."
-      ],
-      "metadata": {}
-    },
-    {
       "cell_type": "code",
       "source": [
-        "message(data$data$researcher$name)"
+        "# Get the name of the researcher with ORCID ID https://orcid.org/0000-0003-1444-9135.\n",
+        "\n",
+        "display_text(data$data$researcher$name)"
       ],
       "outputs": [
         {
@@ -127,15 +109,10 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Return the software packages as data frame, with the fields specified in the query."
-      ],
-      "metadata": {}
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# Return the software packages as data frame, with the fields specified in the query\n",
+        "\n",
         "softwares <- data$data$researcher$softwares$nodes\n",
         "softwares"
       ],
@@ -199,15 +176,10 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Generate a list of formatted citations in APA format for these software packages."
-      ],
-      "metadata": {}
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# Generate a list of formatted citations in APA format for these software packages\n",
+        "\n",
         "ids <- softwares[,1]\n",
         "ids <- substr(ids, 17, 100)\n",
         "ids <- paste(ids, collapse = ',')\n",
