--- a/pid-graph/r-kpi/r-kpi.ipynb
+++ b/pid-graph/r-kpi/r-kpi.ipynb
@@ -5,7 +5,11 @@
       "source": [
         "# PID Graph Key Performance Indicators (KPIs)\n",
         "\n",
-        "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch summary statistics about nodes and connections."
+        "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch summary statistics about nodes and connections.\n",
+        "\n",
+        "\n",
+        "**Goal**: By then end of this notebook you should be able to visualize the PID Graph summary statistics in different ways. We would retrieve the data from the PID Graph, we will transform it and then will create a visulisation to make sense of it.\n",
+        "\n"
       ],
       "metadata": {}
     },
@@ -21,6 +25,7 @@
         "#install.packages(\"dplyr\")\n",
         "#install.packages(\"igraph\")\n",
         "#install.packages(\"RColorBrewer\")\n",
+        "#install.packages(\"Hmisc\")\n",
         "\n",
         "library(\"httr\")\n",
         "library(\"ghql\")\n",
@@ -29,6 +34,9 @@
         "library(\"dplyr\")\n",
         "library(\"igraph\")\n",
         "library(\"RColorBrewer\")\n",
+        "\n",
+        "library(\"Hmisc\")\n",
+        "\n",
         "\n",
         "cli <- GraphqlClient$new(\n",
         "  url = \"https://api.datacite.org/graphql\"\n",
@@ -42,6 +50,19 @@
         "outputHidden": false,
         "inputHidden": false
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Define the Data we want to obtain\n",
+        "\n",
+        "The first step is to define what data we want. For this example we will extract the PID Graph summary statistics. \n",
+        "\n",
+        "We obtain this data using the Graphql query language. A Graphql query looks like a JSON snippet. \n",
+        "\n",
+        "In this examples we will just request all the fields related to sholarly items and their connections."
+      ],
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -93,12 +114,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Run the query and parse the JSON response\n",
+        "\n",
+        "\n",
+        "Once we make the query we will obtain a response that looks like a nested list. \n"
+      ],
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Run the query and parse the JSON response\n",
         "\n",
         "qry$query('getdata', query)\n",
-        "data <- fromJSON(cli$exec(qry$queries$getdata))"
+        "data <- fromJSON(cli$exec(qry$queries$getdata))\n",
+        "list.tree(data)"
       ],
       "outputs": [],
       "execution_count": 37,
@@ -107,6 +139,15 @@
         "outputHidden": false,
         "inputHidden": false
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Transform data for visualisation.\n",
+        "\n",
+        "We need to transform the nested list into some consumable for visulisations. In this case we will transform it into a flat list of Nodes and Connections/Edges. \n"
+      ],
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -142,31 +183,8 @@
         "#edges[which(! edges$from %in% nodes$id) ,]\n",
         "#edges[which(! edges$to %in% nodes$id) ,]\n",
         "\n",
-        "# generate graph\n",
-        "g <- graph_from_data_frame(edges, vertices=nodes)\n",
-        "\n",
-        "# add node colors\n",
-        "cols <- brewer.pal(12, \"Set3\")\n",
-        "V(g)[(V(g)$name==\"Publication\")]$color<-cols[5]\n",
-        "V(g)[(V(g)$name==\"Person\")]$color<-cols[1]\n",
-        "V(g)[(V(g)$name==\"Dataset\")]$color<-cols[4]\n",
-        "V(g)[(V(g)$name==\"SoftwareSourceCode\")]$color<-cols[10]\n",
-        "V(g)[(V(g)$name==\"Organization\")]$color<-cols[11]\n",
-        "V(g)[(V(g)$name==\"Funder\")]$color<-cols[2]\n",
-        "\n",
-        "# add labels\n",
-        "V(g)$label=paste(nodes$id, format(V(g)$count, big.mark=\",\", trim=TRUE), sep=\"\\n\")\n",
-        "E(g)$label <- format(E(g)$count, big.mark=\",\", trim=TRUE)\n",
-        "\n",
-        "# calculate node size and edge width\n",
-        "V(g)$size <- log(V(g)$count, 1.3)\n",
-        "E(g)$width <- log(E(g)$count, 2)\n",
-        "\n",
-        "E(g)$arrow.mode <- 0\n",
-        "l <- layout_nicely(g)\n",
-        "plot(g, layout=l, arrow.mode=0, vertex.label.color=c(\"black\"), vertex.label.family=\"Helvetica\", vertex.label.cex=c(0.7), edge.color=c(\"gray90\"), edge.label.color=c(\"black\"), edge.label.family=\"Helvetica\", edge.label.cex=c(0.7), edge.loop.angle=-pi/4)\n",
-        "title(paste(\"PID Graph\\nNumber of nodes and connections\",\n",
-        "format(Sys.Date(), \"(%d %B %Y)\"), sep=\" \"),cex.main=1.5)"
+        "head(edges)\n",
+        "head(nodes)"
       ],
       "outputs": [
         {
@@ -2383,6 +2401,54 @@
         }
       ],
       "execution_count": 56,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Generate the graph\n",
+        "\n",
+        "The igraph library provides versatile options for descriptive network analysis and visualization.\n",
+        "To generate the graph we take the nodes and edges we generated and plot them together. \n"
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# generate graph\n",
+        "g <- graph_from_data_frame(edges, vertices=nodes)\n",
+        "\n",
+        "# add node colors\n",
+        "cols <- brewer.pal(12, \"Set3\")\n",
+        "V(g)[(V(g)$name==\"Publication\")]$color<-cols[5]\n",
+        "V(g)[(V(g)$name==\"Person\")]$color<-cols[1]\n",
+        "V(g)[(V(g)$name==\"Dataset\")]$color<-cols[4]\n",
+        "V(g)[(V(g)$name==\"SoftwareSourceCode\")]$color<-cols[10]\n",
+        "V(g)[(V(g)$name==\"Organization\")]$color<-cols[11]\n",
+        "V(g)[(V(g)$name==\"Funder\")]$color<-cols[2]\n",
+        "\n",
+        "# add labels\n",
+        "V(g)$label=paste(nodes$id, format(V(g)$count, big.mark=\",\", trim=TRUE), sep=\"\\n\")\n",
+        "E(g)$label <- format(E(g)$count, big.mark=\",\", trim=TRUE)\n",
+        "\n",
+        "# calculate node size and edge width\n",
+        "V(g)$size <- log(V(g)$count, 1.3)\n",
+        "E(g)$width <- log(E(g)$count, 2)\n",
+        "\n",
+        "E(g)$arrow.mode <- 0\n",
+        "l <- layout_nicely(g)\n",
+        "plot(g, layout=l, arrow.mode=0, vertex.label.color=c(\"black\"), vertex.label.family=\"Helvetica\", vertex.label.cex=c(0.7), edge.color=c(\"gray90\"), edge.label.color=c(\"black\"), edge.label.family=\"Helvetica\", edge.label.cex=c(0.7), edge.loop.angle=-pi/4)\n",
+        "title(paste(\"PID Graph\\nNumber of nodes and connections\",\n",
+        "format(Sys.Date(), \"(%d %B %Y)\"), sep=\" \"),cex.main=1.5)"
+      ],
+      "outputs": [],
+      "execution_count": null,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
