Change 'researcher' to 'person'

--- a/pid-graph/py-researcher-publications/py-researcher-publications.ipynb
+++ b/pid-graph/py-researcher-publications/py-researcher-publications.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Publication references by researcher\n",
     "\n",
@@ -11,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -37,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -48,7 +49,7 @@
     "\n",
     "query = gql(\"\"\"\n",
     "{\n",
-    "  researcher(id: \"https://orcid.org/0000-0003-1419-2405\") {\n",
+    "  person(id: \"https://orcid.org/0000-0003-1419-2405\") {\n",
     "    id\n",
     "    name\n",
     "    publications(first: 50) {\n",
@@ -67,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -79,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -88,13 +89,13 @@
    "source": [
     "# Get the name of the researcher with ORCID ID https://orcid.org/0000-0003-1419-2405\n",
     "\n",
-    "display(Markdown((data['researcher']['name'])))"
+    "display(Markdown((data['person']['name'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -107,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -118,7 +119,7 @@
     "\n",
     "ids = ','.join(\n",
     "    list(map(lambda s: s.replace('https://doi.org/',''), \n",
-    "             list(map(lambda x : x['id'], data['researcher']['publications']['nodes'])))))\n",
+    "             list(map(lambda x : x['id'], data['person']['publications']['nodes'])))))\n",
     "\n",
     "response = requests.get(\n",
     "    'https://api.datacite.org/dois',\n",
@@ -150,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   },
   "nteract": {
    "version": "0.14.3"
