--- a/pid-graph/py-researcher-publications/py-researcher-publications.ipynb
+++ b/pid-graph/py-researcher-publications/py-researcher-publications.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Publication references by researcher\n",
     "\n",
@@ -12,8 +11,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -38,8 +37,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -68,8 +67,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -80,8 +79,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -94,8 +93,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -103,13 +102,13 @@
    "source": [
     "# Get the number of publications\n",
     "\n",
-    "data['researcher']['publications']['totalCount']"
+    "data['person']['publications']['totalCount']"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -151,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "nteract": {
    "version": "0.14.3"
