Adds explanatory text to R organizations publications example

--- a/pid-graph/r-organization-publications/r-organization-publications.ipynb
+++ b/pid-graph/r-organization-publications/r-organization-publications.ipynb
@@ -5,8 +5,14 @@
       "source": [
         "# PID Graph for publications from organization DataCite\n",
         "\n",
-        "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch all publications with a DataCite ROR \n",
-        "affiliation identifier."
+        "This notebook uses the [DataCite GraphQL API](https://api.datacite.org/graphql) to fetch all publications whose metadata includes a DataCite ROR affiliation identifier.\n",
+        "\n",
+        "This notebook uses R, but you could do the same thing in another language of your choice. \n",
+        "\n",
+        "It might be also be helpful to consult the [DataCite metadata schema](https://schema.datacite.org) for descriptions of resource types and other available fields. \n",
+        "\n",
+        "# Step 1: Prepare the R GraphQL client\n",
+        "Load necessary libraries and set up the DataCite GraphQL API endpoint. "
       ],
       "metadata": {}
     },
@@ -34,6 +40,16 @@
         "outputHidden": false,
         "inputHidden": false
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Generate the GraphQL query\n",
+        "In this query, we are looking through DataCite DOIs and finding those that include DataCite's own organizational ROR ID as an affiliation identifier. \n",
+        "\n",
+        "DataCite DOIs can be assigned to datasets, publications, software and more. In this example we'll just be looking through DataCite DOIs that are assigned to datasets and publications, but the DataCite GraphQL API lets you specify what you want to search through and how we want to get information back. "
+      ],
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -88,6 +104,13 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Run the query"
+      ],
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Run the query and parse the JSON response\n",
@@ -135,6 +158,14 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 4: Make the graph\n",
+        "First we need to prepare the data frame and define all of the nodes for the graph. "
+      ],
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "# generate data frame for nodes\n",
@@ -155,8 +186,26 @@
         "nodes <- rbind(publications, researchers, organizations)\n",
         "\n",
         "# remove duplicates\n",
-        "nodes <- nodes %>% distinct(id, .keep_all = TRUE)\n",
-        "\n",
+        "nodes <- nodes %>% distinct(id, .keep_all = TRUE)"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Then we define the edges, looping through each node as we go."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# loop through nodes, as they can have more than one edge\n",
         "edges <- data.frame(to=character(), from=character())\n",
         "nodes_with_creators <- bind_rows(data$data$organization$publications$nodes) %>% filter(lengths(creators) != 0)\n",
@@ -199,8 +248,26 @@
         "#}\n",
         "\n",
         "# express DOIs as URLs\n",
-        "edges <- edges %>% filter(!is.na(as.character(to))) %>% mutate(to = ifelse(startsWith(as.character(to), '10.'), paste('https://doi.org/', to, sep=''), as.character(to)))\n",
-        "\n",
+        "edges <- edges %>% filter(!is.na(as.character(to))) %>% mutate(to = ifelse(startsWith(as.character(to), '10.'), paste('https://doi.org/', to, sep=''), as.character(to)))"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next we format the graph for display, specifying color, node size, and other choices."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "g <- graph_from_data_frame(d=edges, vertices=nodes)\n",
         "\n",
         "# add node colors\n",
@@ -221,7 +288,26 @@
         "\n",
         "V(g)$size <- 6\n",
         "E(g)$arrow.mode <- 0\n",
-        "l <- layout_with_dh(g)\n",
+        "l <- layout_with_dh(g)"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Then we plot the graph and add a legend."
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plot(g, layout=l, arrow.mode=0)\n",
         "\n",
         "# Add a legend\n",
@@ -3787,6 +3873,14 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 5: Generate resource lists\n",
+        "To accompany our graph, we can display lists of all the items that are in it. In this example, we're showing APA-formatted citations for everything that's a \"publication\" resource type. "
+      ],
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Generate a list of formatted citations in APA format for the publications\n",
@@ -3892,7 +3986,7 @@
       "display_name": "R"
     },
     "nteract": {
-      "version": "0.15.0"
+      "version": "0.14.5"
     }
   },
   "nbformat": 4,
