Change works by funder
Now also use a awardNumber
And we can display the citation out too without extra calls

--- a/pid-graph/py-find-works-by-funder/py-find-works-by-funder.ipynb
+++ b/pid-graph/py-find-works-by-funder/py-find-works-by-funder.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -51,7 +51,7 @@
     "  funder(id: \"https://doi.org/10.13039/501100000780\") {\n",
     "    id\n",
     "    name\n",
-    "    works(query: \"freya\") {\n",
+    "    works(query: \"fundingReferences.awardNumber:777523\", first: 75) {\n",
     "      totalCount\n",
     "      years {\n",
     "        title\n",
@@ -73,6 +73,7 @@
     "        }\n",
     "        publicationYear\n",
     "        publisher\n",
+    "        formattedCitation(style: \"apa\")\n",
     "      }\n",
     "    }\n",
     "  }\n",
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -112,7 +113,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Total works: 44"
+      "text/markdown": "Total works: 63"
      },
      "metadata": {}
     },
@@ -120,7 +121,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Text 41"
+      "text/markdown": "Text 58"
      },
      "metadata": {}
     },
@@ -136,6 +137,14 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Dataset 2"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
       "text/markdown": "Software 1"
      },
      "metadata": {}
@@ -144,23 +153,205 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Ferguson, C., McEntyre, J., Hendricks, G., Dohna, T., Koop-Jakobsen, K., Madden, F., Dallmeier-Tiessen, S., Sandt, S. V. D., Lavasa, A., Lambert, S., Bunakov, V., Dasler, R., &amp; Fenner, M. (2019). <i>Deliverable D3.2 Requirements for Selected New PID Services</i>. Zenodo. https://doi.org/10.5281/ZENODO.2649230\n\nFerguson, C., McEntyre, J., Hendricks, G., Dohna, T., Koop-Jakobsen, K., Madden, F., Dallmeier-Tiessen, S., Sandt, S. V. D., Lavasa, A., Lambert, S., Bunakov, V., Dasler, R., &amp; Fenner, M. (2019). <i>Deliverable D3.2 Requirements for Selected New PID Services</i>. Zenodo. https://doi.org/10.5281/ZENODO.2649229\n\nFenner, M., Wass, J., Demeranville, T., Wimalaratne, S., &amp; Hallett, R. (2019). <i>D2.2 PID Metadata Provenance</i>. https://doi.org/10.5281/ZENODO.3248653\n\nFenner, M., Wass, J., Demeranville, T., Wimalaratne, S., &amp; Hallett, R. (2019). <i>D2.2 PID Metadata Provenance</i>. https://doi.org/10.5281/ZENODO.3248652\n\nLavasa, A., Dallmeier-Tiessen, S., Sandt, S. V. D., Dohna, T., Koop-Jakobsen, K., Schindler, U., Ferguson, C., McEntyre, J., Madden, F., Lambert, S., Bunakov, V., &amp; Baars, C. (2019). D4.2 Using the PID Graph: Provenance in Disciplinary Systems. <i>Zenodo</i>. https://doi.org/10.5281/ZENODO.3249833\n\nLavasa, A., Dallmeier-Tiessen, S., Sandt, S. V. D., Dohna, T., Koop-Jakobsen, K., Schindler, U., Ferguson, C., McEntyre, J., Madden, F., Lambert, S., Bunakov, V., &amp; Baars, C. (2019). D4.2 Using the PID Graph: Provenance in Disciplinary Systems. <i>Zenodo</i>. https://doi.org/10.5281/ZENODO.3249832\n\nFenner, M. (2019). <i>Jupyter Notebook FREYA PID Graph Key Performance Indicators (KPIs)</i> (Version 1.1.0). DataCite. https://doi.org/10.14454/3BPW-W381\n\nMadden, F. (2019). <i>FREYA RDA UK Workshop July 2019</i>. https://doi.org/10.5281/ZENODO.3361391\n\nMadden, F. (2019). <i>FREYA RDA UK Workshop July 2019</i>. https://doi.org/10.5281/ZENODO.3361390\n\nLammey, R. (2019). <i>Embracing funder workflows (or Grant why-ds…)</i>. https://doi.org/10.5281/ZENODO.3361430\n\nFerguson, C. (2019). <i>Preprints and literature provenance in Europe PMC</i>. https://doi.org/10.5281/ZENODO.3361436\n\nBrown, C. (2019). <i>RDA Europe Update</i>. https://doi.org/10.5281/ZENODO.3361512\n\nBrown, C. (2019). <i>RDA Europe Update</i>. https://doi.org/10.5281/ZENODO.3361511\n\nBrown, C. (2019). <i>JISC and PIDs</i>. https://doi.org/10.5281/ZENODO.3361398\n\nBunakov, V. (2019). <i>STFC case study: PhD research graph</i>. https://doi.org/10.5281/ZENODO.3361419\n\nFenner, M. (2019). <i>RDA Open Science Graphs for FAIR Data Interest Group</i>. https://doi.org/10.5281/ZENODO.3361405\n\nFenner, M. (2019). <i>RDA Open Science Graphs for FAIR Data Interest Group</i>. https://doi.org/10.5281/ZENODO.3361404\n\nCope, J. (2019). <i>DataCite in the UK</i>. https://doi.org/10.5281/ZENODO.3361407\n\nDemeranville, T. (2019). <i>ORCID Update - RDA UK/FREYA Workshop</i>. https://doi.org/10.5281/ZENODO.3361413\n\nDemeranville, T. (2019). <i>ORCID Update - RDA UK/FREYA Workshop</i>. https://doi.org/10.5281/ZENODO.3361412\n\nMadden, F., Mayville, L., Cousijn, H., Horik, R. V., &amp; Kotarski, R. (2019). <i>Deliverable 5.4 Initial Training Materials</i>. https://doi.org/10.5281/ZENODO.3462141\n\nMadden, F., Mayville, L., Cousijn, H., Horik, R. V., &amp; Kotarski, R. (2019). <i>Deliverable 5.4 Initial Training Materials</i>. https://doi.org/10.5281/ZENODO.3462140\n\nde Jong, M., Cousijn, H., Lambert, S., Madden, F., Dohna, T., Koop-Jakobsen, K., &amp; Garza, K. (2019). <i>Project FREYA: Connecting Open Knowledge in the European Open Science Cloud - Materials</i>. https://doi.org/10.5281/ZENODO.3517853\n\nde Jong, M., Cousijn, H., Lambert, S., Madden, F., Dohna, T., Koop-Jakobsen, K., &amp; Garza, K. (2019). <i>Project FREYA: Connecting Open Knowledge in the European Open Science Cloud - Materials</i>. https://doi.org/10.5281/ZENODO.3517852\n\nFerguson, C., McEntyre, J., Hendricks, G., Dohna, T., Koop-Jakobsen, K., Madden, F., Dallmeier-Tiessen, S., Sandt, S. V. D., Lavasa, A., Lambert, S., Bunakov, V., Dasler, R., &amp; Fenner, M. (2019). <i>Deliverable D3.2 Requirements for Selected New PID Services</i>. Zenodo. https://doi.org/10.5281/ZENODO.3554196"
+      "text/markdown": "Fenner, M., Crosas, M., Durand, G., Wimalaratne, S., Gräf, F., Hallett, R., Bernal Llinares, M., Schindler, U., &amp; Clark, T. (2018). <i>Listing of data repositories that embed schema.org metadata in dataset landing pages</i> (Version 1.1.2) [Data set]. Zenodo. <a href='https://doi.org/10.5281/ZENODO.1263942'>https://doi.org/10.5281/ZENODO.1263942</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Reimer, T., &amp; Madden, F. (2019). <i>From Standard to Community Resource: A View on ISNIs and ORG IDs</i>. <a href='https://doi.org/10.5281/ZENODO.2549228'>https://doi.org/10.5281/ZENODO.2549228</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Brown, C. (2019). <i>RDA Europe Update</i>. <a href='https://doi.org/10.5281/ZENODO.3361511'>https://doi.org/10.5281/ZENODO.3361511</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Brown, C. (2019). <i>JISC and PIDs</i>. <a href='https://doi.org/10.5281/ZENODO.3361398'>https://doi.org/10.5281/ZENODO.3361398</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Fenner, M. (2019). <i>Jupyter Notebook FREYA PID Graph Key Performance Indicators (KPIs)</i> (Version 1.1.0). DataCite. <a href='https://doi.org/10.14454/3BPW-W381'>https://doi.org/10.14454/3BPW-W381</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Fenner, M., Wass, J., Demeranville, T., Wimalaratne, S., &amp; Hallett, R. (2019). <i>D2.2 PID Metadata Provenance</i>. <a href='https://doi.org/10.5281/ZENODO.3248652'>https://doi.org/10.5281/ZENODO.3248652</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Morselli, F., Madden, F., Burton, K., &amp; Blaney, J. (2019). <i>(Effectively) Communicating your research online presentations</i>. <a href='https://doi.org/10.5281/ZENODO.3564209'>https://doi.org/10.5281/ZENODO.3564209</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Madden, F., Cope, J., &amp; Ashton, J. (2020). <i>Building the Picture behind a Dataset</i>. <a href='https://doi.org/10.5281/ZENODO.3674734'>https://doi.org/10.5281/ZENODO.3674734</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Morselli, F., Madden, F., Burton, K., &amp; Blaney, J. (2019). <i>(Effectively) Communicating your research online presentations</i>. <a href='https://doi.org/10.5281/ZENODO.3564210'>https://doi.org/10.5281/ZENODO.3564210</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Fenner, M., Wass, J., Demeranville, T., Wimalaratne, S., &amp; Hallett, R. (2019). <i>D2.2 PID Metadata Provenance</i>. <a href='https://doi.org/10.5281/ZENODO.3248653'>https://doi.org/10.5281/ZENODO.3248653</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Simons, N., Brown, C., &amp; Braukmann, R. (2019). <i>Adventure Time: the PID community challenge - Presentation at PIDapalooza19</i>. <a href='https://doi.org/10.5281/ZENODO.2548714'>https://doi.org/10.5281/ZENODO.2548714</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Reimer, T., &amp; Madden, F. (2019). <i>From Standard to Community Resource: A View on ISNIs and ORG IDs</i>. <a href='https://doi.org/10.5281/ZENODO.2549227'>https://doi.org/10.5281/ZENODO.2549227</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Madden, F., Mayville, L., Cousijn, H., Horik, R. V., &amp; Kotarski, R. (2019). <i>Deliverable 5.4 Initial Training Materials</i>. <a href='https://doi.org/10.5281/ZENODO.3462140'>https://doi.org/10.5281/ZENODO.3462140</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Ferguson, C., &amp; Fenner, M. (2019). <i>The FREYA project: Collaborating to link people, papers, data, to new things…</i>. <a href='https://doi.org/10.5281/ZENODO.3514573'>https://doi.org/10.5281/ZENODO.3514573</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Ferguson, C., &amp; Fenner, M. (2019). <i>The FREYA project: Collaborating to link people, papers, data, to new things…</i>. <a href='https://doi.org/10.5281/ZENODO.3514572'>https://doi.org/10.5281/ZENODO.3514572</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Fenner, M. (2019). <i>RDA Open Science Graphs for FAIR Data Interest Group</i>. <a href='https://doi.org/10.5281/ZENODO.3361404'>https://doi.org/10.5281/ZENODO.3361404</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Bunakov, V. (2019). <i>STFC case study: PhD research graph</i>. <a href='https://doi.org/10.5281/ZENODO.3361419'>https://doi.org/10.5281/ZENODO.3361419</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Lavasa, A., Dallmeier-Tiessen, S., Sandt, S. V. D., Dohna, T., Koop-Jakobsen, K., Schindler, U., Ferguson, C., McEntyre, J., Madden, F., Lambert, S., Bunakov, V., &amp; Baars, C. (2019). <i>D4.2 Using the PID Graph: Provenance in Disciplinary Systems</i>. <a href='https://doi.org/10.5281/ZENODO.3249832'>https://doi.org/10.5281/ZENODO.3249832</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Lammey, R. (2019). <i>Embracing funder workflows (or Grant why-ds…)</i>. <a href='https://doi.org/10.5281/ZENODO.3361430'>https://doi.org/10.5281/ZENODO.3361430</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Madden, F., Kearney, N., Boruta, L., &amp; Marín-Arraiza, P. (2019). <i>Fourth FREYA Ambassador Webinar</i>. Zenodo. <a href='https://doi.org/10.5281/ZENODO.3460655'>https://doi.org/10.5281/ZENODO.3460655</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Madden, F., Mayville, L., Cousijn, H., Horik, R. V., &amp; Kotarski, R. (2019). <i>Deliverable 5.4 Initial Training Materials</i>. <a href='https://doi.org/10.5281/ZENODO.3462141'>https://doi.org/10.5281/ZENODO.3462141</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "de Jong, M., Cousijn, H., Lambert, S., Madden, F., Dohna, T., Koop-Jakobsen, K., &amp; Garza, K. (2019). <i>Project FREYA: Connecting Open Knowledge in the European Open Science Cloud - Materials</i>. <a href='https://doi.org/10.5281/ZENODO.3517852'>https://doi.org/10.5281/ZENODO.3517852</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Madden, F. (2019). <i>The Power of PIDs</i>. <a href='https://doi.org/10.5281/ZENODO.3361396'>https://doi.org/10.5281/ZENODO.3361396</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Ferguson, C. (2019). <i>Preprints and literature provenance in Europe PMC</i>. <a href='https://doi.org/10.5281/ZENODO.3361436'>https://doi.org/10.5281/ZENODO.3361436</a>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Bangert, D., Hermans, E., van Horik, R., de Jong, M., Koers, H., &amp; Mokrane, M. (2019). <i>Recommendations for Services in a FAIR data ecosystem</i>. <a href='https://doi.org/10.5281/ZENODO.3585742'>https://doi.org/10.5281/ZENODO.3585742</a>"
      },
      "metadata": {}
     }
    ],
    "source": [
-    "# Generate a list of formatted citations in APA format for the publications\n",
-    "\n",
-    "ids = ','.join(\n",
-    "    list(map(lambda s: s.replace('https://doi.org/',''), \n",
-    "             list(map(lambda x : x['id'], data['funder']['works']['nodes'])))))\n",
-    "\n",
-    "response = requests.get(\n",
-    "    'https://api.datacite.org/dois',\n",
-    "    params={'style': 'apa', 'page[size]': '250', 'sort': 'created', 'ids': ids},\n",
-    "    headers={'Accept': 'text/x-bibliography'}\n",
-    ")\n",
+    "# Display output\n",
     "\n",
     "display(Markdown('## Related funder publications'))\n",
     "display(Markdown('Total works: ' + str(data['funder']['works']['totalCount'])))\n",
@@ -168,7 +359,8 @@
     "for resourceType in data['funder']['works']['resourceTypes']:\n",
     "    display(Markdown('{} {}'.format(resourceType['title'], resourceType['count'])))\n",
     "\n",
-    "display(Markdown(response.content.decode('utf-8')))"
+    "for work in data['funder']['works']['nodes']:\n",
+    "    display(Markdown(work['formattedCitation']))"
    ]
   },
   {
